--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
+@font-face {
+  font-family: 'Trebuchet MS';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Trebuchet MS'), url('./fonts/trebuc.woff') format('woff');
+  }
+
 .App {
-  text-align: center;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 5e-05) 49.88%, rgba(0, 0, 0, 0.5) 100%);
+  background-image: url('./assets/background.png');
+  height: 100vh;
+  overflow-y: hidden;
+  z-index: 10;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  color: #fff;
+  font-size: 36px;
+  line-height: 44px;
+  text-align: center;
+  font-weight: 400;
+  margin-top: 36px;
+  color: #FFFFFF;
+  text-shadow: 0px 1px 1px #000000;
 }
