--- a/src/Card.module.css
+++ b/src/Card.module.css
@@ -6,13 +6,12 @@
 }
 
 .card {
-  margin-top: 24px;
+  margin: 30px 20px 30px;
   max-width: 350px;
   height: auto;
   position: relative;
-  width: 340px;
+  width: 340px; 
 }
-
 
 .restangle {
   display: inline;
@@ -104,8 +103,7 @@
 .bgImg {
   position: absolute;
   left: 4px;
-  bottom: 30px;
-  z-index: 0;
+  bottom: 33.5px;
 }
 
 .nettoTitle {
@@ -121,7 +119,7 @@
   align-items: center;
   text-align: center;
   flex-direction: column;
-
+  z-index: 1;
 }
 
 .nettoTitleActive {
